Updated templates, views. urls and models

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
         <ul class="header__menu">
           <li class="header__menuItem"><a href="{% url 'home' %}">Developers</a></li>
           <li class="header__menuItem"><a href="{% url 'projects' %}">Projects</a></li>
-          <li class="header__menuItem"><a href="inbox.html">Inbox</a></li>
+          <li class="header__menuItem"><a href="{% url 'inbox' %}">Inbox</a></li>
           {% if user.is_authenticated %}
             <li class="header__menuItem"><a href="{% url 'myprofile' request.user.username %}">My Account</a></li>
           {% else %}
