--- a/templates/single-project.html
+++ b/templates/single-project.html
@@ -32,42 +32,27 @@
               36% Postitive Feedback (18 Votes)
             </h5>
 
-            <form class="form" action="#" method="POST">
+            <form class="form" action="#" method="POST">{% csrf_token %}
               <!-- Textarea -->
               <div class="form__field">
-                <label for="formInput#textarea">Comments: </label>
-                <textarea class="input input--textarea" name="message" id="formInput#textarea"
-                  placeholder="Write your comments here..."></textarea>
-              </div>
+                {{ form.as_p }}
               <input class="btn btn--sub btn--lg" type="submit" value="Comments" />
             </form>
             <div class="commentList">
-              <div class="comment">
-                <a href="profile.html">
-                  <img class="avatar avatar--md"
-                    src="https://pbs.twimg.com/profile_images/1335382240931368961/b3wSZKj4_400x400.jpg" alt="user" />
-                </a>
-                <div class="comment__details">
-                  <a href="profile.html" class="comment__author">Sulamita Ivanov</a>
-                  <p class="comment__info">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit alias numquam perferendis
-                    mollitia minus minima exercitationem possimus ab deserunt qui, soluta iusto doloribus eveniet
-                    similique consequuntur ratione, dignissimos ut magni laborum quo.
-                  </p>
+              {% for comment in project.get_comments.all %}
+                <div class="comment">
+                  <a href="{% url 'profile-detail' comment.account_id %}">
+                    <img class="avatar avatar--md"
+                      src="{{ comment.account.avatar.url }}" alt="user" />
+                  </a>
+                  <div class="comment__details">
+                    <a href="{% url 'profile-detail' comment.account_id %}" class="comment__author">{{ comment.account.full_name }}</a>
+                    <p class="comment__info">
+                      {{ comment.comment }}
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="comment">
-                <a href="profile.html">
-                  <img class="avatar avatar--md" src="https://avatars.githubusercontent.com/u/33843378" alt="user" />
-                </a>
-                <div class="comment__details">
-                  <a href="profile.html" class="comment__author">Dennis Ivanov</a>
-                  <p class="comment__info">
-                    Consectetur adipisicing elit. Reprehenderit alias numquam perferendis mollitia minus minima
-                    exercitationem possimus ab deserunt qui, ratione, dignissimos ut magni laborum quo.
-                  </p>
-                </div>
-              </div>
+              {% endfor %}
             </div>
           </div>
         </div>
