--- a/templates/projects.html
+++ b/templates/projects.html
@@ -32,8 +32,8 @@
                 <a href="{% url 'project-detail' project.slug %}" class="project">
                   <img class="project__thumbnail" src="{{ project.preview_image.url }}" alt="project thumbnail" />
                   <div class="card__body">
-                    <h3 class="project__title">{{ project.title }}</h3>
-                    <p><a class="project__author" href="{% url 'profile-detail' project.owner_id %}">by {{ project.owner.full_name }}</a></p>
+                    <h3 class="project__title">{{ project.title|urlize }}</h3>
+                    <p><a class="project__author" href="{% url 'profile-detail' project.owner_id %}">by {{ project.owner.full_name|title }}</a></p>
                     <p class="project--rating">
                       <span style="font-weight: bold;">98%</span> Postitive
                       Feedback (72 Votes)
@@ -41,7 +41,7 @@
                     <div class="project__tags">
                       {% for tag in project.tag.all %}
                         <span class="tag tag--pill tag--main">
-                          <small>{{ tag }}</small>
+                          <small>{{ tag|title }}</small>
                         </span>
                       {% endfor %}
                     </div>
