--- a/templates/single-project.html
+++ b/templates/single-project.html
@@ -10,7 +10,7 @@
           <div class="singleProject__toolStack">
             {% for tag in project.tag.all %}
               <span class="tag tag--pill tag--sub tag--lg">
-                <small>{{tag}}</small>
+                <small>{{tag|title}}</small>
               </span>
             {% endfor %}
           </div>
@@ -19,11 +19,11 @@
         </div>
         <div class="column column--2of3">
           <img class="singleProject__preview" src="{{ project.preview_image.url }}" alt="portfolio thumbnail" />
-          <a href="{% url 'profile-detail' project.owner_id %}" class="singleProject__developer">{{ project.owner.full_name }}</a>
-          <h2 class="singleProject__title">{{ project.title }}</h2>
+          <a href="{% url 'profile-detail' project.owner_id %}" class="singleProject__developer">{{ project.owner.full_name|title }}</a>
+          <h2 class="singleProject__title">{{ project.title|urlize|title }}</h2>
           <h3 class="singleProject__subtitle">About the Project</h3>
           <div class="singleProject__info">
-            {{ project.description }}
+            {{ project.description|linebreaks|urlize }}
           </div>
 
           <div class="comments">
@@ -46,9 +46,9 @@
                       src="{{ comment.account.avatar.url }}" alt="user" />
                   </a>
                   <div class="comment__details">
-                    <a href="{% url 'profile-detail' comment.account_id %}" class="comment__author">{{ comment.account.full_name }}</a>
+                    <a href="{% url 'profile-detail' comment.account_id %}" class="comment__author">{{ comment.account.full_name|title }}</a>
                     <p class="comment__info">
-                      {{ comment.comment }}
+                      {{ comment.comment|linebreaks|urlize }}
                     </p>
                   </div>
                 </div>
